# slack-quantitative-trade-helper

./: .aider_state.json  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pnpm test  └── providers.test.ts
.claude/: e2e-tests.md
.github/: copilot-instructions.md
.github/workflows/: __jira_check.yml  aider-continue.yml  auto-approve-bot-workflows.yml  feature-branch-open-pr.yml  jira-ticket-claude-code.yml  jira-ticket-started.yml  pr-code-review.yml  pr-fix-unresolved.yml  pr-merged-close-jira.yml  pr-to-jira-review.yml
apps/slack-bot/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/slack-bot/prisma/: schema.prisma
apps/slack-bot/src/: index.ts
apps/slack-bot/src/__tests__/: placeholder.test.ts
apps/slack-bot/src/db/: seed.ts
apps/slack-bot/tests/: placeholder.test.ts  schemas.test.ts
apps/slack-bot/tests/fixtures/: fixtures.test.ts
db/prisma/: schema.prisma
db/prisma/migrations/20260529152100_init/: migration.sql
docs/: DESIGN_SPEC_TEMPLATE.md  IMPLEMENTATION_PLAN.md  PM_ROLE.md  PRD.md
docs/features/feature-001-mvp-launch/: PRD.md  UX-SPEC.md  tasks.md
research/quant-python/: pyproject.toml
research/quant-python/src/investment_research/config/: __init__.py  settings.py
research/quant-python/src/investment_research/portfolio/: __init__.py  allocation.py  drift.py  models.py
research/quant-python/src/quant_core/: __init__.py
research/quant-python/src/quant_python/: __init__.py
research/quant-python/tests/: test_placeholder.py
research/quant-python/tests/config/: test_settings.py
research/quant-python/tests/portfolio/: test_allocation.py  test_drift.py
scripts/: aider_agent.py  code_review_agent.py  fix_unresolved_agent.py  pm_agent.py
