[project]
name = "quant-python"
version = "0.1.0"
description = "Quantitative research engine: allocation drift, rebalancing recommendations, paper evaluation"
readme = "README.md"
authors = [
    { name = "Freddy Liu", email = "54787518+xfreddy2007@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.40.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.0",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
