[project]
name = "investment-research"
version = "0.1.0"
description = "Quantitative research and rebalancing engine for investment-helper"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.0",
    "polars>=1.9.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investment_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

